--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,8 @@
-ul {
-  background-color: red;
-}
-ul li {
-  background-color: green;
-}
-ul li:hover, ul li:focus-within {
-  background-color: blue;
+div {
+  padding: 50px;
+  background-color: yellow;
 }
 
-div {
-  background-color: pink;
-}
-div p {
-  color: yellow;
+p {
+  color: blue;
 }/*# sourceMappingURL=styles.css.map */
